examples/test/testpolicy1259.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1259
  namespace: namespace362
spec:
  podSelector:
    matchLabels:
      key41: value34
      key38: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value42
      podSelector:
        matchLabels:
          key35: value42
          key24: value0
